e2e/tests/all/snapshots/cascader_search_rest_mobile.snap
---
source: e2e/src/suite.rs
description: cascader_search at mobile (rest)
expression: tree
---
LabelText
  StaticText "Place"
StaticText "Where the parcel goes."
combobox "Place" [expanded=false] [haspopup=listbox] [invalid] [required]
  description "Where the parcel goes. Cities only. Pick a place."
status [atomic] [live=polite]
StaticText "Cities only."
StaticText "Pick a place."
