e2e/tests/all/snapshots/checkbox_rest_desktop.snap
---
source: e2e/src/suite.rs
description: checkbox at desktop (rest)
expression: tree
---
checkbox "Accept the terms" [checked=false]
checkbox "All channels" [checked=mixed]
checkbox "Select row" [checked=false]
checkbox "Priority support" [checked=false]
  description "Answers within four hours, around the clock."
StaticText "Answers within four hours, around the clock."
checkbox "Share usage data" [checked=false] [invalid]
  description "You can withdraw consent at any time. Accept to continue."
LabelText
  StaticText "Share usage data"
StaticText "You can withdraw consent at any time."
StaticText "Accept to continue."
checkbox "Locked" [checked]
checkbox "Unavailable" [checked=false] [disabled]
