e2e/tests/all/snapshots/checkbox_ticked_desktop.snap
---
source: e2e/src/suite.rs
description: checkbox at desktop (ticked)
expression: tree
---
checkbox "Accept the terms" [checked]
checkbox "All channels" [checked=mixed]
checkbox "Select row" [checked=false]
checkbox "Priority support" [checked=false]
StaticText "Answers within four hours, around the clock."
checkbox "Share usage data" [checked=false] [invalid]
LabelText
  StaticText "Share usage data"
StaticText "You can withdraw consent at any time."
StaticText "Accept to continue."
checkbox "Locked" [checked]
checkbox "Unavailable" [checked=false] [disabled]
