e2e/tests/all/snapshots/chip_rest_desktop.snap
---
source: e2e/src/suite.rs
description: chip at desktop (rest)
expression: tree
---
generic
  StaticText "Tag"
generic
  checkbox "rust" [checked]
generic
  checkbox "css" [checked=false]
generic
  checkbox "html" [checked=false]
generic [disabled]
  checkbox "Unavailable" [checked=false] [disabled]
button "Action"
  StaticText "Action"
link "Link"
  StaticText "Link"
link "Dead link" [disabled]
  StaticText "Dead link"
generic
  checkbox "tonal" [checked=false]
generic
  checkbox "elevated" [checked=false]
generic
  checkbox "text" [checked=false]
generic
  checkbox "small" [checked=false]
