e2e/tests/all/snapshots/chip_rest_mobile.snap
---
source: e2e/src/suite.rs
description: chip at mobile (rest)
expression: tree
---
StaticText "Tag"
checkbox "rust" [checked]
LabelText
  StaticText "rust"
checkbox "css" [checked=false]
checkbox "html" [checked=false]
generic [disabled]
  checkbox "Unavailable" [checked=false] [disabled]
button "Action"
  StaticText "Action"
link "Link" [current=page]
  StaticText "Link"
link "Dead link" [disabled]
  StaticText "Dead link"
checkbox "tonal" [checked=false]
checkbox "elevated" [checked=false]
checkbox "text" [checked=false]
checkbox "small" [checked=false]
