e2e/tests/all/snapshots/chip_ticked_mobile.snap
---
source: e2e/src/suite.rs
description: chip at mobile (ticked)
expression: tree
---
StaticText "Tag"
checkbox "rust" [checked]
LabelText
  StaticText "rust"
checkbox "css" [checked]
LabelText
  StaticText "css"
checkbox "html" [checked=false]
generic [disabled]
  checkbox "Unavailable" [checked=false] [disabled]
button "Action"
  StaticText "Action"
link "Link" [current=page]
  StaticText "Link"
link "Dead link" [disabled]
  StaticText "Dead link"
checkbox "tonal" [checked=false]
checkbox "elevated" [checked=false]
checkbox "text" [checked=false]
checkbox "small" [checked=false]
